--- a/apps/core-api/package.json
+++ b/apps/core-api/package.json
@@ -30,6 +30,8 @@
     "@prisma/client": "^7.3.0",
     "@prisma/extension-accelerate": "^3.0.1",
     "axios": "^1.13.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
